LMS-demo/force-app/main/default/objects/Merchandise__c/fields/Merchandise_Desc__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Desc__c</fullName>
    <label>Merchandise Desc</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>