LMS-demo/force-app/main/default/objects/Merchandise__c/fields/Merchandise_Stock__c.field-meta.xml
<CustomField>
    <fullName>Merchandise_Stock__c</fullName>
    <label>Merchandise Stock</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>