LMS-demo/force-app/main/default/objects/Merchandise__c/fields/uni_combo__c.field-meta.xml
<CustomField>
    <fullName>uni_combo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>uni_combo</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>