LMS-demo/force-app/main/default/objects/Merchandise__c/recordTypes/Merchandise_Layout.recordType-meta.xml
<RecordType>
    <fullName>Merchandise_Layout</fullName>
    <active>true</active>
    <label>Merchandise Layout</label>
</RecordType>