LMS-demo/force-app/main/default/objects/Merchandise__c/recordTypes/New_Merchandise_Layout.recordType-meta.xml
<RecordType>
    <fullName>New_Merchandise_Layout</fullName>
    <active>true</active>
    <label>New Merchandise Layout</label>
</RecordType>