LMS-demo/force-app/main/default/objects/Merchandise__c/listViews/My_Queue_Merchandise.listView-meta.xml
<ListView>
    <fullName>My_Queue_Merchandise</fullName>
    <filterScope>Queue</filterScope>
    <label>My Queue</label>
    <queue>My_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>